savefig botton, update byexposurefit and include ellipticities fields

--- a/y3a1-v29tests/y3a1-v29TESTS.ipynb
+++ b/y3a1-v29tests/y3a1-v29TESTS.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotScatter(filename, field, xtitle, ytitle, title, xlog=False, ylog=True, grid=True):\n",
+    "def plotScatterRho(filename, field, xtitle, ytitle, title, xlog=False, ylog=True, grid=True, savefig=False):\n",
     "    import fitsio\n",
     "    import matplotlib \n",
     "    import matplotlib.pyplot as plt\n",
@@ -88,12 +88,54 @@
     "        plt.grid()\n",
     "    plt.xlabel(xtitle)\n",
     "    plt.ylabel(ytitle)\n",
-    "    plt.title(title)    "
+    "    plt.title(title)\n",
+    "    if(savefig):\n",
+    "        plt.savefig('mrho2p'+'_vs_'+field +'__'+filename[:-5]+'.pdf', dpi=150)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotScatter(filename, xfield, yfield, xtitle, ytitle, title, xlog=False, ylog=False, grid=True, savefig=False):\n",
+    "    import fitsio\n",
+    "    import matplotlib \n",
+    "    import matplotlib.pyplot as plt\n",
+    "    from astropy.coordinates import SkyCoord\n",
+    "    from astropy import units\n",
+    "    import numpy as np\n",
+    "    %matplotlib inline\n",
+    "\n",
+    "    data = fitsio.read(filename)\n",
+    "    data = data.astype(data.dtype.newbyteorder('='))\n",
+    "    \n",
+    "    ignorex =  (data[xfield] ==-999.) |  (data[xfield] == None) | ( np.isnan(data[xfield])) \n",
+    "    data = data[~ignorex]\n",
+    "    ignorey =  (data[yfield] ==-999.) |  (data[yfield] == None) | ( np.isnan(data[yfield])) \n",
+    "    data = data[~ignorey]\n",
+    " \n",
+    "\n",
+    "    plt.figure(figsize=(10,6))\n",
+    "    plt.plot( data[xfield] , data[yfield] , color='blue', marker= 'o',  markersize=5,  linewidth=0 )\n",
+    "\n",
+    "    if(ylog):\n",
+    "        plt.yscale('log')\n",
+    "    if(xlog):\n",
+    "        plt.xscale('log')\n",
+    "    if(grid): \n",
+    "        plt.grid()\n",
+    "    plt.xlabel(xtitle)\n",
+    "    plt.ylabel(ytitle)\n",
+    "    plt.title(title)\n",
+    "    if(savefig):\n",
+    "        plt.savefig(yfield+'_vs_'+xfield +'__'+filename[:-5]+'.pdf', dpi=150)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +282,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2D Color map on the DES footprint. Each field defines a different array of values for the color bar. If the shape of the zone is an hexagon means that the mean value of the field was negative, and we took the absolute value to plot properly a log-scale"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 247,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -265,49 +314,25 @@
    "source": [
     "filenames=['rho2pbyzones.fits', 'rho2pbyexposure.fits']\n",
     "cmaps=['gnuplot','seismic','Greys','tab20','tab20b','tab20c', 'ocean']\n",
-    "fields=['mrho2p','musestars','mtotalstars']\n",
-    "columns =  ['airmass',  'dimmseeing',  'dT', 'fwhm', 'humidity', 'msurtemp',  'outtemp', 'sat',  'sigsky',  \n",
-    "           'sky',  'teldec', 'telha',  'telra',  'tiling',  'mtotalstars',  'musestars' ,  'winddir',  'windspd' ]\n",
-    "units =  [' ', ' [arcsec]', ' [Celcius]', ' ',  ' [%]', ' [Celsius]', ' [Celsius]', ' ', ' ', ' ', \n",
-    "          ' [deg]', '  [deg]',' [deg]', ' ', ' ',  '  ', ' [deg]',  ' [m/s]'   ]\n",
+    "columns =  ['mrho2p','airmass',  'dimmseeing',  'dT', 'fwhm', 'humidity', 'msurtemp',  'outtemp', 'sat',  'sigsky',  \n",
+    "           'sky',  'teldec', 'telha',  'telra',  'tiling',  'mtotalstars',  'musestars' ,  'winddir',  'windspd',\n",
+    "            'mean_obs_e1', 'mean_obs_e2', 'mean_obs_e', 'mean_obs_epw2', 'mean_piff_e1','mean_piff_e2', \n",
+    "            'mean_piff_e', 'mean_piff_epw2', 'mean_de1',  'mean_de2', 'mean_de','mean_depw2']\n",
+    "units =  ['',' ', ' [arcsec]', ' [Celcius]', ' ',  ' [%]', ' [Celsius]', ' [Celsius]', ' ', ' ', ' ', \n",
+    "          ' [deg]', '  [deg]',' [deg]', ' ', ' ',  '  ', ' [deg]',  ' [m/s]', ' ', ' ', ' ', ' ', ' ', ' ', ' ', \n",
+    "          ' ', ' ',  ' ', ' ', ''  ]\n",
     "xtitles= np.core.defchararray.add(np.array(columns),np.array(units))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wfilename = widgets.Dropdown(description='filename', options=filenames)\n",
-    "wmarkersize = widgets.IntSlider(value=100, min=5,max = 105,step=20)\n",
-    "markervalues=[100,5]\n",
-    "titles=['BY ZONE', 'BY EXPOSURE']\n",
-    "wtitles = widgets.Dropdown(description='titles', options=titles)\n",
-    "#wtitles.layout.visibility = 'hidden'\n",
-    "wtitles.layout.display = 'none'\n",
-    "def changemarkersize(change):\n",
-    "    wmarkersize.value=  markervalues[wfilename.index]\n",
-    "    wtitles.value=  titles[wfilename.index]\n",
-    "wfilename.observe(changemarkersize, names='value')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2D Color map on the DES footprint. Each field defines a different array of values for the color bar. If the shape of the zone is an hexagon means that the mean value of the field was negative, and we took the absolute value to plot properly a log-scale"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba98fdfd6e4e4155882f2d26ed5be066",
+       "model_id": "65d3860574a74548b9cd4bace233deb1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,70 +345,31 @@
     }
    ],
    "source": [
+    "wfilename = widgets.Dropdown(description='filename', options=filenames)\n",
+    "fields=['mrho2p','musestars','mtotalstars']\n",
+    "titles=['BY ZONE', 'BY EXPOSURE']\n",
+    "wtitles = widgets.Dropdown(description='titles', options=titles)\n",
+    "wmarkersize = widgets.IntSlider(value=100, min=5,max = 105,step=20)\n",
+    "markervalues=[100,5]\n",
+    "#wtitles.layout.visibility = 'hidden'\n",
+    "wtitles.layout.display = 'none'\n",
+    "def changemarkersize(change):\n",
+    "    wmarkersize.value=  markervalues[wfilename.index]\n",
+    "    wtitles.value=  titles[wfilename.index]\n",
+    "wfilename.observe(changemarkersize, names='value')\n",
     "g = interactive(plotRaDec2D, filename=wfilename, field =fields, title=wtitles,cmap_name=cmaps,markersize=wmarkersize )\n",
     "display(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wfilename2 = widgets.Dropdown(description='filename', options=filenames)\n",
-    "wtitles2 = widgets.Dropdown(description='titles', options=titles)\n",
-    "#wtitles.layout.visibility = 'hidden'\n",
-    "wtitles2.layout.display = 'none'\n",
-    "def changetitle(change):\n",
-    "    wtitles2.value=  titles[wfilename2.index]\n",
-    "wfilename2.observe(changetitle, names='value')\n",
-    "\n",
-    "wfields = widgets.Dropdown(description='fields', options=columns)\n",
-    "wxtitles = widgets.Dropdown(description='xtitles',options= xtitles)\n",
-    "def on_value_change(change):\n",
-    "    wxtitles.value=  xtitles[wfields.index]\n",
-    "    wtitles2.value=  titles[wfilename2.index]\n",
-    "wfields.observe(on_value_change, names='value')\n",
-    "#wxtitles.layout.visibility = 'hidden'\n",
-    "wxtitles.layout.display = 'none'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db252856af604146b3d96ba4fb636bbf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='filename', options=('rho2pbyzones.fits', 'rho2pbyexposure.fits'), …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "w=interactive(plotScatter, filename=wfilename2, field =wfields, xtitle=wxtitles ,ytitle=fixed('rho2p'), title=wtitles2,\n",
-    "         xlog=False ,ylog=True, grid=True )\n",
-    "\n",
-    "display(w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec90f764b808401ab2706fcef97effc5",
+       "model_id": "dd8a30ab8df74cb2b3b8e5046bb796a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -396,10 +382,128 @@
     }
    ],
    "source": [
-    "filenames3 = ['rho2pbyccd_allzones.fits', 'rho2pbyccd_zone80.fits']\n",
-    "z=interactive(plotCCD2D, filename=filenames3, field=fixed('mrho2p'), title=fixed('Focal plane'), cmap_name = cmaps)\n",
-    "\n",
+    "filenames2 = ['rho2pbyccd_allzones.fits', 'rho2pbyccd_zone80.fits']\n",
+    "z=interactive(plotCCD2D, filename=filenames2, field=fixed('mrho2p'), title=fixed('Focal plane'), cmap_name = cmaps)\n",
     "display(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e76cf3fa70d4ca782388334af9dd40e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='filename', options=('rho2pbyzones.fits', 'rho2pbyexposure.fits'), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wfilename3 = widgets.Dropdown(description='filename', options=filenames)\n",
+    "wtitles3 = widgets.Dropdown(description='titles', options=titles)\n",
+    "def changetitle(change):\n",
+    "    wtitles3.value=  titles[wfilename3.index]\n",
+    "wfilename3.observe(changetitle, names='value')\n",
+    "wtitles3.layout.display = 'none'\n",
+    "\n",
+    "wfields3 = widgets.Dropdown(description='fields', options=columns)\n",
+    "wxtitles3 = widgets.Dropdown(description='xtitles',options= xtitles)\n",
+    "def on_value_change(change):\n",
+    "    wxtitles3.value=  xtitles[wfields3.index]\n",
+    "wfields3.observe(on_value_change, names='value')\n",
+    "wxtitles3.layout.display = 'none'\n",
+    "\n",
+    "wsavebool3 =widgets.ToggleButton(\n",
+    "    value=False,\n",
+    "    description='Savefig',\n",
+    "    disabled=False,\n",
+    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    "    icon='check'\n",
+    ")\n",
+    "\n",
+    "w=interactive(plotScatterRho, filename=wfilename3, field =wfields3, xtitle=wxtitles3 ,ytitle=fixed('mrho2p')\n",
+    "              , title=wtitles3, xlog=False ,ylog=True, grid=True, savefig=wsavebool3 )\n",
+    "\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f6226217090c46d18286afc66900545a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='filename', options=('rho2pbyzones.fits', 'rho2pbyexposure.fits'), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "wfilename4 = widgets.Dropdown(description='filename', options=filenames)\n",
+    "wtitles4 = widgets.Dropdown(description='titles', options=titles)\n",
+    "wtitles4.layout.display = 'none'\n",
+    "def changetitle(change):\n",
+    "    wtitles4.value=  titles[wfilename4.index]\n",
+    "wfilename4.observe(changetitle, names='value')\n",
+    "\n",
+    "wxfields4 = widgets.Dropdown(description='x-field', options=columns)\n",
+    "wxtitles4 = widgets.Dropdown(description='x-title',options= xtitles)\n",
+    "def on_value_changex(change):\n",
+    "    wxtitles4.value=  xtitles[wxfields4.index]\n",
+    "wxfields4.observe(on_value_changex, names='value')\n",
+    "wxtitles4.layout.display = 'none'\n",
+    "\n",
+    "wyfields4 = widgets.Dropdown(description='y-field', options=columns)\n",
+    "wytitles4 = widgets.Dropdown(description='y-title',options= xtitles)\n",
+    "def on_value_changey(change):\n",
+    "    wytitles4.value=  xtitles[wyfields4.index]\n",
+    "wyfields4.observe(on_value_changey, names='value')\n",
+    "wytitles4.layout.display = 'none'\n",
+    "\n",
+    "wsavebool4 =widgets.ToggleButton(\n",
+    "    value=False,\n",
+    "    description='Savefig',\n",
+    "    disabled=False,\n",
+    "    button_style='success', # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Description',\n",
+    "    icon='check'\n",
+    ")\n",
+    "\n",
+    "w4=interactive(plotScatter, filename=wfilename4, xfield =wxfields4, yfield =wyfields4, xtitle=wxtitles4 ,\n",
+    "               ytitle=wytitles4, title=wtitles4, xlog=False ,ylog=False, grid=True, savefig= wsavebool4 )\n",
+    "display(w4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
    ]
   }
  ],
@@ -419,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
