rho2 by zones was not the mena was around 80 arc, include new fields in byccd and updating notebook to those new fields

--- a/y3a1-v29tests/y3a1-v29TESTS.ipynb
+++ b/y3a1-v29tests/y3a1-v29TESTS.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotRaDec2D(filename, field, title, cmap_name, markersize): \n",
+    "def plotRaDec2D(filename, field, title, cmap_name, markersize, colorlog): \n",
     "    import fitsio\n",
     "    import matplotlib\n",
     "    import matplotlib.pyplot as plt\n",
@@ -41,10 +41,16 @@
     "    mdatan = [ -x for x in data2[field]]\n",
     "\n",
     "    fig = plt.figure(figsize=(10,6))\n",
+    "    \n",
+    "    if(colorlog):\n",
+    "        sct = plt.scatter(ra, dec, s=markersize, marker='s' , cmap=cmap_name, c=rho2p, \n",
+    "                      norm=LogNorm( vmin=np.nanmin(rho2p), vmax=np.nanmax(rho2p))  )\n",
+    "        plt.scatter(ra2, dec2, s=markersize, marker='p' , cmap=cmap_name, c=mdatan, \n",
+    "                norm=LogNorm( vmin=np.nanmin(rho2p), vmax=np.nanmax(rho2p))   )\n",
+    "    else:\n",
+    "        sct = plt.scatter(ra, dec, s=markersize, marker='s' , cmap=cmap_name, c=rho2p )\n",
+    "        plt.scatter(ra2, dec2, s=markersize, marker='p' , cmap=cmap_name, c=mdatan)\n",
     "\n",
-    "    sct = plt.scatter(ra, dec, s=markersize, marker='s' , cmap=cmap_name, c=rho2p, norm=LogNorm( vmin=np.nanmin(rho2p), vmax=np.nanmax(rho2p))  )\n",
-    "    plt.scatter(ra2, dec2, s=markersize, marker='p' , cmap=cmap_name, c=mdatan, norm=LogNorm( vmin=np.nanmin(rho2p), vmax=np.nanmax(rho2p))   )\n",
-    "   \n",
     "    plt.colorbar(sct)\n",
     "    plt.xlabel('R.A')\n",
     "    plt.ylabel('DEC')\n",
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -326,13 +332,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65d3860574a74548b9cd4bace233deb1",
+       "model_id": "7ccce29765f540119e80d4ca9dd59355",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,7 +352,7 @@
    ],
    "source": [
     "wfilename = widgets.Dropdown(description='filename', options=filenames)\n",
-    "fields=['mrho2p','musestars','mtotalstars']\n",
+    "#fields=['mrho2p','musestars','mtotalstars']\n",
     "titles=['BY ZONE', 'BY EXPOSURE']\n",
     "wtitles = widgets.Dropdown(description='titles', options=titles)\n",
     "wmarkersize = widgets.IntSlider(value=100, min=5,max = 105,step=20)\n",
@@ -357,19 +363,20 @@
     "    wmarkersize.value=  markervalues[wfilename.index]\n",
     "    wtitles.value=  titles[wfilename.index]\n",
     "wfilename.observe(changemarkersize, names='value')\n",
-    "g = interactive(plotRaDec2D, filename=wfilename, field =fields, title=wtitles,cmap_name=cmaps,markersize=wmarkersize )\n",
+    "g = interactive(plotRaDec2D, filename=wfilename, field = columns, title=wtitles,\n",
+    "                cmap_name=cmaps,markersize=wmarkersize, colorlog=True )\n",
     "display(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd8a30ab8df74cb2b3b8e5046bb796a8",
+       "model_id": "19744833099c4ac0a8760c9ab74c024f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -383,13 +390,15 @@
    ],
    "source": [
     "filenames2 = ['rho2pbyccd_allzones.fits', 'rho2pbyccd_zone80.fits']\n",
-    "z=interactive(plotCCD2D, filename=filenames2, field=fixed('mrho2p'), title=fixed('Focal plane'), cmap_name = cmaps)\n",
+    "columnsccd =  ['mrho2p','mean_obs_e1', 'mean_obs_e2', 'mean_obs_e', 'mean_obs_epw2', 'mean_piff_e1','mean_piff_e2', \n",
+    "            'mean_piff_e', 'mean_piff_epw2', 'mean_de1',  'mean_de2', 'mean_de','mean_depw2']\n",
+    "z=interactive(plotCCD2D, filename=filenames2, field=columnsccd, title=fixed('Focal plane'), cmap_name = cmaps)\n",
     "display(z)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -397,7 +406,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e76cf3fa70d4ca782388334af9dd40e",
+       "model_id": "8f375b5831d240b8b3f4c0cf1f394693",
        "version_major": 2,
        "version_minor": 0
       },
@@ -441,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -449,7 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6226217090c46d18286afc66900545a",
+       "model_id": "679edf5945b54604932350dcd904a390",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,19 +478,19 @@
     "    wtitles4.value=  titles[wfilename4.index]\n",
     "wfilename4.observe(changetitle, names='value')\n",
     "\n",
-    "wxfields4 = widgets.Dropdown(description='x-field', options=columns)\n",
-    "wxtitles4 = widgets.Dropdown(description='x-title',options= xtitles)\n",
-    "def on_value_changex(change):\n",
-    "    wxtitles4.value=  xtitles[wxfields4.index]\n",
-    "wxfields4.observe(on_value_changex, names='value')\n",
-    "wxtitles4.layout.display = 'none'\n",
-    "\n",
     "wyfields4 = widgets.Dropdown(description='y-field', options=columns)\n",
     "wytitles4 = widgets.Dropdown(description='y-title',options= xtitles)\n",
     "def on_value_changey(change):\n",
     "    wytitles4.value=  xtitles[wyfields4.index]\n",
     "wyfields4.observe(on_value_changey, names='value')\n",
     "wytitles4.layout.display = 'none'\n",
+    "\n",
+    "wxfields4 = widgets.Dropdown(description='x-field', options=columns)\n",
+    "wxtitles4 = widgets.Dropdown(description='x-title',options= xtitles)\n",
+    "def on_value_changex(change):\n",
+    "    wxtitles4.value=  xtitles[wxfields4.index]\n",
+    "wxfields4.observe(on_value_changex, names='value')\n",
+    "wxtitles4.layout.display = 'none'\n",
     "\n",
     "wsavebool4 =widgets.ToggleButton(\n",
     "    value=False,\n",
